--- a/.env.development
+++ b/.env.development
@@ -7,15 +7,11 @@ JWT_EXPIRE = 86400 # 单位秒
 REFRESH_TOKEN_SECRET = admin!@#123
 REFRESH_TOKEN_EXPIRE = 2592000
 
-# swagger
-SWAGGER_ENABLE = true
-SWAGGER_PATH = api-docs
-SWAGGER_VERSION = 1.0
 
 # db
 DB_HOST = 127.0.0.1
 DB_PORT = 3306
-DB_DATABASE = datatalk
+DB_DATABASE = data_talk
 DB_USERNAME = root
 DB_PASSWORD = admin
 DB_SYNCHRONIZE = true
@@ -28,3 +24,8 @@ SMTP_HOST = smtp.163.com
 SMTP_PORT = 465
 SMTP_USER = nest_admin@163.com
 SMTP_PASS = VIPLLOIPMETTROYU
+
+# swagger
+SWAGGER_ENABLE = true
+SWAGGER_PATH = api-docs
+SWAGGER_VERSION = 1.0
