--- a/.env.production
+++ b/.env.production
@@ -7,19 +7,16 @@ JWT_EXPIRE = 86400 # 单位秒
 REFRESH_TOKEN_SECRET = admin!@#123
 REFRESH_TOKEN_EXPIRE = 2592000
 
-# swagger
-SWAGGER_ENABLE = true
-SWAGGER_PATH = api-docs
-SWAGGER_VERSION = 1.0
 
 # db
-DB_HOST = host.docker.internal
-DB_PORT = 13307
-DB_DATABASE = nest_admin
+DB_HOST = 127.0.0.1
+DB_PORT = 3306
+DB_DATABASE = data_talk
 DB_USERNAME = root
-DB_PASSWORD = root
-DB_SYNCHRONIZE = false
+DB_PASSWORD = admin
+DB_SYNCHRONIZE = true
 DB_LOGGING = ["error"]
+
 
 
 # smtp
@@ -28,5 +25,7 @@ SMTP_PORT = 465
 SMTP_USER = nest_admin@163.com
 SMTP_PASS = VIPLLOIPMETTROYU
 
-# 是否为演示模式(在演示模式下，会拦截除 GET 方法以外的所有请求)
-IS_DEMO = true
+# swagger
+SWAGGER_ENABLE = true
+SWAGGER_PATH = api-docs
+SWAGGER_VERSION = 1.0
