--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# TEST
+/test.json
+/test.html
+/test.ts
+/test.js
+/test.md
