--- a/package.json
+++ b/package.json
@@ -22,33 +22,46 @@
   "dependencies": {
     "@fastify/static": "^8.1.1",
     "@fastify/swagger": "6.0.0",
-    "@nestjs/common": "^11.0.14",
+    "@nestjs/common": "^11.0.16",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.14",
+    "@nestjs/core": "^11.0.16",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
-    "@nestjs/platform-fastify": "^11.0.14",
-    "@nestjs/swagger": "^11.1.1",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-fastify": "^11.0.16",
+    "@nestjs/swagger": "^11.1.2",
+    "@nestjs/typeorm": "^11.0.0",
+    "@types/lodash": "^4.17.16",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.5.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mysql2": "^3.14.0",
     "nestjs-i18n": "^10.5.1",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "typeorm": "^0.3.22"
+    "typeorm": "^0.3.22",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.24.0",
     "@nestjs/cli": "^11.0.6",
-    "@nestjs/schematics": "^11.0.4",
-    "@nestjs/testing": "^11.0.14",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.0.16",
     "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.11.18",
+    "@swc/core": "^1.11.20",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.14.1",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
