--- a/.env.production
+++ b/.env.production
@@ -26,6 +26,9 @@ SMTP_USER = nest_admin@163.com
 SMTP_PASS = VIPLLOIPMETTROYU
 
 # swagger
+SWAGGER_TITLE = "DataTalk API"
 SWAGGER_ENABLE = true
-SWAGGER_PATH = api-docs
-SWAGGER_VERSION = 1.0
+SWAGGER_PATH = swagger
+SWAGGER_VERSION = "1.0"
+SWAGGER_DESCRIPTION = "DataTalk API"
+SWAGGER_TAG = API
